--- a/jupyter-labs-spacex-data-collection-api.ipynb
+++ b/jupyter-labs-spacex-data-collection-api.ipynb
@@ -1759,21 +1759,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'isnull'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m LP_null_count \u001b[38;5;241m=\u001b[39m LandingPad\u001b[38;5;241m.\u001b[39misnull\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(LP_null_count)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'isnull'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#LP_null_count = LandingPad.isnull\n",
     "\n",
@@ -2207,11 +2195,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['PayloadMass'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_falcon9.to_csv('dataset_part_1.csv', index=False)"
+    "df.to_csv('dataset_part_1.csv', index=False)"
    ]
   },
   {
